Missing Animation Update for Surface Resolution U & V #59176

Closed
opened 2018-12-11 11:10:07 +01:00 by William Reynish · 10 comments

System Information
Operating system: macOS 10.14.1 (18B75)
Graphics card: Intel Iris Plus Graphics 640 1536 MB

Blender Version
Broken: example: 2.79b release & 2.80
Worked: It seems to be a very old bug - never worked it seems

Short description of error
When keyframing the Surface U or V values, the viewport is not updated to reflect the changes

Exact steps for others to reproduce the error

  • Add a Surface object type
  • Insert a keyframe for the U or V values
  • Change frame and insert a different value
  • Scrub the playhead or play animation - the viewport does not update to reflect the value.
**System Information** Operating system: macOS 10.14.1 (18B75) Graphics card: Intel Iris Plus Graphics 640 1536 MB **Blender Version** Broken: example: 2.79b release & 2.80 Worked: It seems to be a very old bug - never worked it seems **Short description of error** When keyframing the Surface U or V values, the viewport is not updated to reflect the changes **Exact steps for others to reproduce the error** - Add a Surface object type - Insert a keyframe for the U or V values - Change frame and insert a different value - Scrub the playhead or play animation - the viewport does not update to reflect the value.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht who to assign this to?

@brecht who to assign this to?
Bastien Montagne was assigned by Brecht Van Lommel 2018-12-14 18:56:12 +01:00

It's kind of random who to assign this to, feel free to reassign.

It's kind of random who to assign this to, feel free to reassign.
Bastien Montagne removed their assignment 2019-06-06 11:51:24 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2019-06-06 11:51:24 +02:00

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

This is actually a topic for @Sergey I think… It’s not only affecting preview U/V resolution (cyclic toggle e.g. is not handled either), and it’s affecting all kind of obdata (geometry data-blocks) I think. At least am getting the same kind of non-update behavior when trying to key auto-smooth toggle and value of a mesh e.g.

@Sergey I guess those are missing relations in the depsgraph? This is not a regression though, so nothing like high priority task, just nice to check at some point. Or I don’t mind diving into this a bit more, if you can give me some hints of what to check.

This is actually a topic for @Sergey I think… It’s not only affecting preview U/V resolution (cyclic toggle e.g. is not handled either), and it’s affecting all kind of obdata (geometry data-blocks) I think. At least am getting the same kind of non-update behavior when trying to key auto-smooth toggle and value of a mesh e.g. @Sergey I guess those are missing relations in the depsgraph? This is not a regression though, so nothing like high priority task, just nice to check at some point. Or I don’t mind diving into this a bit more, if you can give me some hints of what to check.

@brecht, @mont29, the auto-smooth we should be able to fix. However, the curves/surfaces i'm not sure we can/should support.

Changing resolution on a Curve datablock goes and changes resolution on every spline. I don't think that would be a good idea to do such kind of updates from animation.
Cyclic and order i even more tricky, since they have some hidden inter-dependnecies via knots.
Cyclic will also affect handles, which might not be desirable as well.

Additionally, animating such settings makes it impossible to have motion-blur working for such objects.

Think it's easier and more predictable to simply consider those settings non-animatable rather that falling into this rabbit hole.

For the mesh settings i've created D5030.

@brecht, @mont29, the auto-smooth we should be able to fix. However, the curves/surfaces i'm not sure we can/should support. Changing resolution on a Curve datablock goes and changes resolution on every spline. I don't think that would be a good idea to do such kind of updates from animation. Cyclic and order i even more tricky, since they have some hidden inter-dependnecies via knots. Cyclic will also affect handles, which might not be desirable as well. Additionally, animating such settings makes it impossible to have motion-blur working for such objects. Think it's easier and more predictable to simply consider those settings non-animatable rather that falling into this rabbit hole. For the mesh settings i've created [D5030](https://archive.blender.org/developer/D5030).

Fine with me to make these non-animatable.

Fine with me to make these non-animatable.

This issue was referenced by 9e8e32e117

This issue was referenced by 9e8e32e1178983bb257bfeb79b05d0a1af07dc13

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59176
No description provided.